# CentralLockingSystem

./: .gitignore  README.md  pyproject.toml  requirements.txt
CentralLockingSystem/: db.sqlite3  manage.py
CentralLockingSystem/CentralLockingSystem/: asgi.py  settings.py  urls.py  wsgi.py
CentralLockingSystem/resources/: models.py  tests.py  urls.py  views.py
